<resources>
    <string name="app_name">IsVegetarianFood</string>
    <string name="app_name_zh">素不素</string>
    <!-- IVFInfoProductActivity   -->
    <string name="product_info_name">ProductInfo</string>
    <string name="product_info_name_zh">商品資訊</string>
    <string name="product_info_error_msg">發生錯誤！商品資料有誤.</string>
    <string name="ivf_activity_scanner_decode_error_msg">BarCode錯誤編碼，請重新掃描</string>
    <string name="ivf_activity_scanner_format_error_msg">BarCode格式錯誤</string>

    <!--    ScannerActivity-->
    <string name="turn_on_flashlight">閃光燈 關 </string>
    <string name="turn_off_flashlight">閃光燈 開</string>

    <string name="ivf_info_category">類別：</string>
    <string name="ivf_info_origin">產地：</string>
    <string name="ivf_info_vegetarian">素食類型：</string>
    <string name="ivf_info_remark">註解：</string>
    <string name="ivf_info_remark_text">沒有特別註解.</string>

    <string name="ivf_category_topSearch">熱門搜尋</string>
    <string name="ivf_category_cookies">餅乾</string>
    <string name="ivf_category_candy">糖果</string>
    <string name="ivf_category_drinks">飲料</string>
    <string name="ivf_category_instantNoodles">泡麵</string>
    <string name="ivf_category_Ingredients">食材</string>
    <string name="ivf_category_cannedFood">罐頭</string>
    <string name="ivf_category_jam">果醬</string>
    <string name="ivf_category_other">其他</string>

    <string name="ivf_info_bar_tittle">ProductInfo</string>
    <string name="ivf_info_bar_tittle_zh">商品資訊</string>

    <!--    IVFLoginActivity-->
    <string name="ivf_login_msg">Welcome IsVegetarianFood</string>
    <string name="ivf_login_msg_zh">歡迎加入 素不素行列</string>
    <string name="ivf_login_tab_login">Login</string>
    <string name="ivf_login_tab_login_zh">登入</string>
    <string name="ivf_login_tab_signup">Signup</string>
    <string name="ivf_login_tab_signup_zh">註冊</string>
    <!--    IVFLoginFragment-->
    <string name="ivf_fragment_login_account">Emil</string>
    <string name="ivf_fragment_login_account_zh">信箱</string>
    <string name="ivf_fragment_login_password">Password</string>
    <string name="ivf_fragment_login_password_zh">密碼</string>
    <string name="ivf_fragment_login_forget">forget the password?</string>
    <string name="ivf_fragment_login_forget_zh">忘記密碼?</string>
    <string name="ivf_fragment_login_login">LOGIN</string>
    <string name="ivf_fragment_login_login_zh">登入</string>
    <!--    IVFSignupFragment-->
    <string name="ivf_fragment_signup_name">Name</string>
    <string name="ivf_fragment_signup_name_zh">名稱</string>
    <string name="ivf_fragment_signup_gender">Gender</string>
    <string name="ivf_fragment_signup_gender_zh">性別</string>
    <string name="ivf_fragment_signup_account">Emil</string>
    <string name="ivf_fragment_signup_account_zh">信箱</string>
    <string name="ivf_fragment_signup_password">Password</string>
    <string name="ivf_fragment_signup_password_zh">密碼</string>
    <string name="ivf_fragment_signup_confirm_password">Confirm Password</string>
    <string name="ivf_fragment_signup_confirm_password_zh">再次輸入密碼</string>
    <string name="ivf_fragment_signup_phone">Phone Number</string>
    <string name="ivf_fragment_signup_phone_zh">電話</string>
    <string name="ivf_fragment_signup_verify_code">Verify Code</string>
    <string name="ivf_fragment_signup_verify_code_zh">驗證碼</string>
    <string name="ivf_fragment_signup_verify_code_btn">Get</string>
    <string name="ivf_fragment_signup_verify_code_btn_zh">取得驗證碼</string>
    <string name="ivf_fragment_signup_confirm">CONFIRM</string>
    <string name="ivf_fragment_signup_confirm_zh">確定</string>

    <!--    IVFLoginActivity-->
    <string name="ivf_login_edit_account_error">信箱格式錯誤</string>
    <string name="ivf_login_edit_password_error">密碼格式錯誤</string>
    <string name="ivf_login_error">登入失敗</string>
    <string name="ivf_logging_error">登入異常，請稍後再試</string>

    <!--    IVFMainActivity-->
    <string name="ivf_main_logout_success">Logout success.</string>
    <string name="ivf_main_logout_success_zh">登出成功.</string>
    <string name="ivf_main_logout_fail">Logout fail, please try again later.</string>
    <string name="ivf_main_logout_fail_zh">登出失敗, 請稍後再試.</string>
    <string name="ivf_main_feedback_fail">Error, you need to try later or try to restart the application.</string>
    <string name="ivf_main_feedback_fail_zh">發現錯誤，需稍後在試，或嘗試重新開啟APP.</string>
    <string name="ivf_main_feedback_result">"Hello {0}, thanks you feedback.</string>
    <string name="ivf_main_feedback_result_zh">"哈囉 {0}, 感謝您的回報問題.</string>

    <string name="ivf_main_member_remote_get_fail">Error, get member info fail.</string>
    <string name="ivf_main_member_remote_get_fail_zh">個人資料發生錯，請稍後再試.</string>
    <string name="ivf_main_member_remote_fail">Error, you need to try later or try to restart the application.</string>
    <string name="ivf_main_member_remote_fail_zh">發現錯誤，需稍後在試，或嘗試重新開啟APP.</string>

    <string name="ivf_main_scanner_product_auth_fail">User auth fail.</string>
    <string name="ivf_main_scanner_product_auth_fail_zh">授權失敗，請嘗試重新登入.</string>
    <string name="ivf_main_scanner_product_get_fail">Error, get product fail.</string>
    <string name="ivf_main_scanner_product_get_fail_zh">取得商品失敗，請稍後再試.</string>

    <!-- Dialog   -->
    <string name="ivf_dialog_logout_tittle">Log out</string>
    <string name="ivf_dialog_logout_tittle_zh">登出</string>
    <string name="ivf_dialog_logout_message">Are you sure want to log out?</string>
    <string name="ivf_dialog_logout_message_zh">確定要 登出 ?</string>
    <string name="ivf_dialog_close_tittle">Close</string>
    <string name="ivf_dialog_close_tittle_zh">離開</string>
    <string name="ivf_dialog_close_message">Are you sure close application?</string>
    <string name="ivf_dialog_close_message_zh">確定要離開 素不素 程式?</string>
    <string name="ivf_dialog_left">Cancel</string>
    <string name="ivf_dialog_left_zh">取消</string>
    <string name="ivf_dialog_right">Confirm</string>
    <string name="ivf_dialog_right_zh">確定</string>

    <!--   IVFSignupActivity -->
    <string name="ivf_signup_edit_name_error">名稱太長</string>
    <string name="ivf_signup_edit_name_empty_error">名稱不能為空白</string>
    <string name="ivf_signup_edit_email_error">信箱格式錯誤</string>
    <string name="ivf_signup_edit_email_empty_error">信箱不能為空白</string>
    <string name="ivf_signup_edit_password_error">密碼格式錯誤</string>
    <string name="ivf_signup_edit_password_empty_error">密碼不能為空白</string>
    <string name="ivf_signup_edit_password_match_error">密碼不一致</string>
    <string name="ivf_signup_edit_password_match_empty_error">確認密碼不能為空白</string>
    <string name="ivf_signup_edit_phone_error">電話格式錯誤</string>
    <string name="ivf_signup_edit_phone_empty_error">電話不能為空白</string>
    <string name="ivf_signup_edit_gender_error">請選擇性別</string>
    <string name="ivf_signup_edit_county_error">請選擇縣市</string>
    <string name="ivf_signup_edit_town_error">請選擇市鄉鎮</string>

    <!--  NavigationIvfMember  -->
    <string name="ivf_navigation_member_tittle">會員資料</string>
    <string name="ivf_navigation_member_save">儲存</string>
    <string name="ivf_navigation_member_cancel">取消</string>
    <string name="ivf_navigation_member_name">姓名*</string>
    <string name="ivf_navigation_member_email">信箱</string>
    <string name="ivf_navigation_member_phone">電話</string>
    <string name="ivf_navigation_member_change_password">變更密碼</string>
    <string name="ivf_navigation_member_name_long_error">名稱過長</string>
    <string name="ivf_navigation_member_name_empty_error">名稱不能空白</string>
    <string name="ivf_navigation_member_county_error">請選擇縣市</string>
    <string name="ivf_navigation_member_town_error">請選擇市鄉鎮</string>
    <string name="ivf_navigation_member_update_success">更新成功.</string>
    <string name="ivf_navigation_member_update_fail">更新失敗，請稍後再試.</string>
    <string name="ivf_navigation_member_data_error">發生錯誤，請稍後再試.</string>
</resources>