<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/ivf_login_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ivf_login_edittext_shap"
            android:hint="@string/ivf_fragment_login_account_zh"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintVertical_bias=".2"
            app:layout_constraintWidth_percent=".8" />

        <EditText
            android:id="@+id/ivf_login_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ivf_login_edittext_shap"
            android:hint="@string/ivf_fragment_login_password_zh"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivf_login_account"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintWidth_percent=".8" />

        <TextView
            android:id="@+id/ivf_login_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ivf_fragment_login_forget_zh"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/ivf_login_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivf_login_password"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintHorizontal_bias="1"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"/>

        <Button
            android:id="@+id/ivf_login_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ivf_login_buttom_shap"
            android:text="@string/ivf_fragment_login_login_zh"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivf_login_password"
            app:layout_constraintWidth_percent=".8"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintHorizontal_bias=".5"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
