<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewmodel"
            type="thisis.vegetarian.question.mark.viewmodel.IVFSignupViewModel" />
        <import type="android.view.View"/>
    </data>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/ivf_signup_name_gender_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias=".5"
                app:layout_constraintVertical_bias=".07"
                app:layout_constraintWidth_percent=".8"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/ivf_signup_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="20dp"
                    android:paddingEnd="5dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="@drawable/ivf_login_edittext_shap"
                    android:hint="@string/ivf_fragment_signup_name_zh"
                    android:inputType="textEmailAddress"/>

                <Spinner
                    android:id="@+id/ivf_signup_gender"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:background="@drawable/ivf_login_edittext_shap"
                    android:entries="@array/ivf_signup_gender"
                    android:gravity="center"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    android:spinnerMode="dialog" />
            </LinearLayout>

            <EditText
                android:id="@+id/ivf_signup_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/ivf_login_edittext_shap"
                android:hint="@string/ivf_fragment_signup_account_zh"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivf_signup_name_gender_group"
                app:layout_constraintHorizontal_bias=".5"
                app:layout_constraintVertical_bias=".07"
                app:layout_constraintWidth_percent=".8" />

            <EditText
                android:id="@+id/ivf_signup_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/ivf_login_edittext_shap"
                android:hint="@string/ivf_fragment_signup_password_zh"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="20dp"
                android:inputType="textPassword"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivf_signup_email"
                app:layout_constraintHorizontal_bias=".5"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintWidth_percent=".8" />

            <EditText
                android:id="@+id/ivf_signup_confirm_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/ivf_login_edittext_shap"
                android:hint="@string/ivf_fragment_signup_confirm_password_zh"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="20dp"
                android:inputType="textPassword"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivf_signup_password"
                app:layout_constraintHorizontal_bias=".5"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintWidth_percent=".8" />

            <LinearLayout
                android:id="@+id/ivf_signup_local"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivf_signup_confirm_password"
                app:layout_constraintHorizontal_bias=".5"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintWidth_percent=".8"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">
                <Spinner
                    android:id="@+id/ivf_signup_local_county"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/ivf_login_edittext_shap"
                    spinnerContent="@{viewmodel.countyString}"
                    selectionPosition="@={viewmodel.selectedPosition}"
                    android:prompt="@string/taiwan_county_tittle_zh"
                    android:spinnerMode="dialog"
                    android:paddingStart="10dp"
                    android:layout_marginEnd="3dp"
                    android:gravity="center"/>

                <Spinner
                    android:id="@+id/ivf_signup_local_town"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/ivf_login_edittext_shap"
                    spinnerContent="@{viewmodel.townString}"
                    android:prompt="@string/taiwan_town_tittle_zh"
                    android:spinnerMode="dialog"
                    android:paddingStart="10dp"
                    android:layout_marginStart="2dp"
                    android:gravity="center"
                    android:clickable="@{viewmodel.townClickable}"/>
            </LinearLayout>


            <EditText
                android:id="@+id/ivf_signup_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/ivf_login_edittext_shap"
                android:hint="@string/ivf_fragment_signup_phone_zh"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="20dp"
                android:inputType="phone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivf_signup_local"
                app:layout_constraintHorizontal_bias=".5"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintWidth_percent=".8" />

            <LinearLayout
                android:id="@+id/ivf_signup_verify"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivf_signup_phone"
                app:layout_constraintHorizontal_bias=".5"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintWidth_percent=".8"
                android:visibility="gone">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/ivf_login_signup_verify_edit_shap"
                    android:hint="@string/ivf_fragment_signup_verify_code_zh"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:inputType="text"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:text="@string/ivf_fragment_signup_verify_code_btn_zh"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:background="@drawable/ivf_login_signup_verify_tv_shap"
                        android:padding="1dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:background="@drawable/ivf_login_signup_verify_tv_shap"
                        android:gravity="center"
                        android:visibility="gone"
                        android:text="0 S"/>

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/ivf_signup_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/ivf_login_buttom_shap"
                android:text="@string/ivf_fragment_signup_confirm_zh"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivf_signup_verify"
                app:layout_constraintWidth_percent=".8"
                app:layout_constraintHorizontal_bias=".5"
                app:layout_constraintVertical_bias="0"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:indeterminateDrawable="@drawable/ivf_progress_yellow_shap"
                app:layout_constraintVertical_bias=".35"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>
